wait for packery before we show range

--- a/www/templates/montage-history.html
+++ b/www/templates/montage-history.html
@@ -55,7 +55,8 @@
             </div>
             </figcaption>
             </figure>
-            <div ng-show="showControls">
+            <!-- wait for packery otherwise we get large ranges -->
+            <div ng-show="showControls && packeryDone">
 
 
 
