--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -45,9 +45,11 @@
                     <span style="float:left;margin-top:-18px;background-color:#96281B;color:#fff;font-size:11px;opacity:0.7;width:90px;border-radius: 0px 0px 5px 5px;">&nbsp;&nbsp;&nbsp;<i class="ion-calendar"></i>&nbsp;&nbsp;{{prettifyTime(event.Event.StartTime)}}</span>&nbsp;&nbsp;
                     
                                         
-                    <span style="float:left;margin-top:-18px;background-color:#fff;color:#888;font-size:11px;opacity:1;">&nbsp;&nbsp;<i class="ion-arrow-right-b"></i>&nbsp;{{event.Event.humanizeTime}}</span>
+                    <span style="float:left;margin-top:-18px;background-color:#fff;color:#888;font-size:11px;opacity:1;">&nbsp;&nbsp;<i class="ion-arrow-right-b"></i>&nbsp;{{event.Event.humanizeTime}} <span ng-if="!event.Event.EndTime">({{'kRecordingProgress'|translate}})</span>
+                    </span>
                     
-                    
+                 
+                   
                     
                     <span style="float:right;margin-top:-18px;background-color:#444444;color:#fff;font-size:11px;opacity:0.7;width:90px;border-radius: 0px 0px 5px 5px;">&nbsp;&nbsp;&nbsp;<i class="ion-clock"></i>&nbsp;&nbsp;{{prettifyDate(event.Event.StartTime)}}</span>
                     
@@ -113,7 +115,7 @@
                     </div>
 
                     <span style="float:right">
-                                <div ng-if="event.Event.EndTime">
+                                <div ng-if="event.Event.EndTime || 1">
                                     
                                     <button class="button button-small button-outline icon icon-left ion-stats-bars"
                                             ng-click="closeIfOpen(event);analyzeEvent(event)" >  {{'kAnalyze' | translate }}
@@ -133,9 +135,7 @@
                                     </button>
                                 </div>
                               
-                                <div ng-if="!event.Event.EndTime">
-                                    <p>{{'kRecordingProgress'|translate}}</p>
-                                </div>
+                                
                     </span>
 
 
