--- a/www/templates/monitors.html
+++ b/www/templates/monitors.html
@@ -51,7 +51,7 @@
                     <div style="float:right;">
                         <a class="button button-small icon icon-left icon ion-gear-a"
                            href="" ng-click="changeConfig(monitor.Monitor.Name, monitor.Monitor.Id,monitor.Monitor.Enabled,monitor.Monitor.Function);">{{'kConfiguration' | translate}}</a>
-                        <a class="button button-small icon icon-left ion-calendar" href="#/events/{{monitor.Monitor.Id}}">{{'kEventsCap'|translate}}</a>
+                        <a class="button button-small icon icon-left ion-calendar" href="#/events/{{monitor.Monitor.Id}}/false">{{'kEventsCap'|translate}}</a>
                         <a class="button button-small icon icon-left ion-ios-eye" ng-click="openModal(monitor.Monitor.Id, monitor.Monitor.Controllable, monitor.Monitor.ControlId, monitor.Monitor.connKey,  monitor)">{{'kLiveView' | translate}}</a>
                     </div>
                 </div>
