take out option to remove controls

--- a/www/templates/montage-history.html
+++ b/www/templates/montage-history.html
@@ -56,7 +56,7 @@
             </figcaption>
             </figure>
             <!-- wait for packery otherwise we get large ranges -->
-            <div ng-show="showControls && packeryDone">
+            <div ng-show="packeryDone">
 
 
 
