switching to OS fonts

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -719,6 +719,10 @@ body {
     font-family: sans-serif;
 }
 
+* {
+  font-family: -apple-system, "Helvetica Neue", sans-serif;
+}
+
 /* ---- grid ---- */
 .dragborder {
     border: 2px dotted #3498db;
