--- a/www/templates/zm-portal-login.html
+++ b/www/templates/zm-portal-login.html
@@ -23,7 +23,7 @@
                     <button class="button  button-dark icon ion-unlocked" ng-click="unlock()"> Unlock
                     </button>
                 </div>
-                <div id = "really-your-fault" class="animated fadeIn" style="color:white">{{'kPortalNotice' | translate}}</div>
+                <div id = "really-your-fault" class="animated fadeIn" style="color:white">{{'kPortalNotice' | translate}}<br/><br/>{{'kPortalNoticeSub' | translate}}</div>
                 
             </center>
         </div>
