--- a/www/templates/montage-history.html
+++ b/www/templates/montage-history.html
@@ -78,9 +78,9 @@
 							</div>
 						</div>
 						<!-- valid auth session &!background -->
-						<div ng-if="!$root.authSession=='undefined' || isBackground()">
+						<!--<div ng-if="!$root.authSession=='undefined' || isBackground()">
 							<img image-spinner-src="img/pausevideo.png" />
-						</div>
+						</div>-->
 					</span>
 				</div>
 				<ion-item ng-show="!MontageMonitors.length"> {{'kNoMonitors' | translate }} </ion-item>
