#353 - more timezone tweaks, especially making sure humanizeTime is ALWAYS using local time irrespective of setting

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,6 +21,11 @@
     font-family: "fontawesome";
     content: "\f100";
 }
+.icon-server:before {
+    font-family: "fontawesome";
+    content: "\f233";
+}
+
 .image-loader-container {
     position: relative;
     width: 100%;
