--- a/www/templates/montage-history.html
+++ b/www/templates/montage-history.html
@@ -107,7 +107,7 @@
 				</ion-pull-up-bar>
 				<ion-pull-up-content scroll="true">
 					<div class="list list-inset">
-						<div class="item item-divider">{{'kTimeline' | translate}}</div>
+						<div class="item item-divider">{{'kTimeline' | translate}} ({{getLocalTZ()}})</div>
 						<div class="item item-input-inset"> {{'kFrom'|translate}}:&nbsp;
                     
 							<div class="row">
